clickable 'CONTACT' / white modal backgorund

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <div class="topbar">
   <div>
     <p>THUTHUKA KHUMALO</p>
-    <p (click)="toggleContactModal()">CONTACT</p>
+    <p (click)="toggleContactModal()" style="cursor: pointer;">CONTACT</p>
   </div>
 </div>
 
