--- a/src/app/windows/web-design/web-design.component.html
+++ b/src/app/windows/web-design/web-design.component.html
@@ -1,15 +1,11 @@
 <p class="title">Web Design</p>
 <div class="content-container">
     <div class="process">
-        <!-- <p>Description Text Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
-            molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
-            numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
-            optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis
-            obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam
-            nihil, eveniet aliquid culpa officia au</p> -->
         <p>
-            A good website is one that is built before any HTML is written. I have experiencein working in UI/UX applications such as Adobe XD and Figma.
-            Whether it be a proffestional presenting website, or a more lighteheared modern one I can make a good mockup on it
+            A good website is one that is built before any HTML is written. I have experiencein working in UI/UX
+            applications such as Adobe XD and Figma.
+            Whether it be a proffestional presenting website, or a more lighteheared modern one I can make a good mockup
+            on it
         </p>
     </div>
     <div class="showcase">
@@ -31,3 +27,13 @@
         </div>
     </div>
 </div>
+
+<modal-container id="hippyNewsModal" [modalDisplay]="showHippyModal" (close)="toggleHippyModal()">
+    <div class="hippyModalContainer">
+        <div class="hippy-image-container"></div>
+        <div class="hippy-text-container">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet, voluptatum neque. Error illum provident ab
+            amet odit!
+        </div>
+    </div>
+</modal-container>
