--- a/src/app/modal-container/modal-container.component.css
+++ b/src/app/modal-container/modal-container.component.css
@@ -2,8 +2,8 @@
     position: fixed;
     left: 0px;
     top: 0px;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
