fixed spelling errors

--- a/src/app/windows/web-design/web-design.component.html
+++ b/src/app/windows/web-design/web-design.component.html
@@ -2,9 +2,9 @@
 <div class="content-container">
     <div class="process">
         <p>
-            A good website is one that is built before any HTML is written. I have experiencein working in UI/UX
+            A good website is one that is built before any HTML is written. I have experience in working in UI/UX
             applications such as Adobe XD and Figma.
-            Whether it be a proffestional presenting website, or a more lighteheared modern one I can make a good mockup
+            Whether it be a proffesional presenting website, or a more light-hearted modern one I can make a good mockup
             on it
         </p>
     </div>
