top of fold is mobile friendly

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<sidebar [windows]="windows" (scrollToSection)="scrollTo($event)"></sidebar>
+<sidebar id="sidebar" [windows]="windows" (scrollToSection)="scrollTo($event)"></sidebar>
 <div class="topbar">
   <div>
     <p>THUTHUKA KHUMALO</p>
@@ -41,7 +41,7 @@
       <category (click)="scrollTo('wedDesignWindow')" marginLeft="-27%" background="radial-gradient(#d6eef6, #e5d7f4)">
         <div class="category-text">web design</div>
       </category>
-      <category (click)="scrollTo('graphicDesignWindow')" marginLeft="15%"
+      <category (click)="scrollTo('graphicDesignWindow')" marginLeft="7%"
         background="radial-gradient(#B2876E, #9C5323)">
         <div class="category-text">graphic design</div>
       </category>
