--- a/src/app/windows/web-design/web-design.component.html
+++ b/src/app/windows/web-design/web-design.component.html
@@ -9,6 +9,10 @@
         </p>
     </div>
     <div class="showcase">
+        <div class="expandable-card" style="background-image: url(../../../assets/images/Web-Design/hippy_news_preview.png);">
+            <div class="toggle-expand"></div>
+            <div class="expandable-title">Hippy/Alternative News Website</div>
+        </div>
         <div class="card-container">
             <div class="text-container">
                 <div style="background-image: url(../../../assets/images/Web-Design/hippy_news_preview.png);"></div>
