--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -217,6 +217,12 @@ web-dev {
         width: 20vw;
         height: 20vw;
     }
+
+    .contact-box {
+        gap: 1.6rem;
+        width: 50vw;
+        padding: 1.3rem;
+    }
 }
 
 @media(max-width: 815px) {
@@ -240,5 +246,40 @@ web-dev {
         width: 30vw;
         height: 30vw;
         margin-top: 13%;
+    }
+
+    #sidebar {
+        display: none;
+    }
+
+    .topbar {
+        top: 1.6rem;
+    }
+
+    .topbar>div {
+        font-size: 11pt;
+        padding: 0% 5%;
+    }
+    
+    .category-text {
+        font-size: 26pt;
+    }
+
+    .categories {
+        gap: 2rem;
+    }
+
+    .contact-box {
+        gap: 1.6rem;
+        width: 80vw;
+        padding: 1.3rem;
+    }
+
+    .contact-method>#name {
+        font-size: 20pt;
+    }
+    
+    .contact-method>#value {
+        font-size: 14pt;
     }
 }
