--- a/src/app/category/category.component.css
+++ b/src/app/category/category.component.css
@@ -13,7 +13,7 @@
     height: 100%;
 }
 
-.background-block > div {
+.background-block>div {
     background: linear-gradient(16deg, #262626, #616161);
     width: 59%;
     height: 100%;
@@ -30,22 +30,22 @@
     height: 100%;
 }
 
-.content-block > .content {
+.content-block>.content {
     /* position: relative; */
     background-color: whitesmoke;
     display: flex;
     justify-content: center;
     align-items: center;
     clip-path: polygon(10% 10%,
-                        90% 10%,
-                        90% 90%,
-                        10% 90%);
+            90% 10%,
+            90% 90%,
+            10% 90%);
     width: 120%;
     height: 75%;
     z-index: 1;
 }
 
-.content-block > .content {
+.content-block>.content {
     filter: blur(17px);
 }
 
@@ -62,4 +62,23 @@
     /* position: absolute; */
     /* bottom: -2rem; */
     z-index: 0;
+}
+
+@media(max-width: 1073px) {
+    .category-container {
+        min-width: 48vh;
+        min-height: 48vh;
+    }
+}
+
+@media(max-width: 815px) {
+    .category-container {
+        min-width: 38vh;
+        min-height: 38vh;
+    }
+
+    .background-block>div {
+        background: linear-gradient(16deg, #262626, #616161);
+        width: 72%;
+    }
 }
