--- a/src/app/windows/web-dev/web-dev.component.css
+++ b/src/app/windows/web-dev/web-dev.component.css
@@ -1,20 +1,23 @@
 .title {
     font-family: Segoe-UI;
     color: #FFFFFF;
-    font-size: 120pt;
+    font-size: 114pt;
     text-align: center;
 }
 
 .dev-container {
     display: flex;
+    flex-direction: column;
     justify-content: space-around;
     width: 90%;
+    gap: 2.5rem;
 }
 
 .skillset {
     flex-basis: 35%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
     align-items: center;
     gap: 2rem;
     color: white;
@@ -22,18 +25,20 @@
 
 .skillset>p {
     font-size: 36pt;
+    flex-basis: 100%;
 }
 
 .skill-display {
     width: 100%;
     display: flex;
+    flex-basis: 30%;
     justify-content: space-between;
     font-size: 24pt;
 }
 
 .skill-icon {
-    height: 120%;
-    flex-basis: 18%;
+    /* height: 120%;
+    flex-basis: 18%; */
     flex-basis: 18%;
     /* background-color: blue; */
     background-position: center;
@@ -121,4 +126,32 @@
     font-size: 14pt;
     padding: 9px 23px;
     gap: 0.8rem;
+}
+
+.desc-and-media {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    text-align: center;
+    font-size: 19pt;
+}
+
+.desc-and-media > #desc {
+    flex-basis: 35%;
+    display: flex;
+    align-items: center;
+}
+
+.desc-and-media > #media {
+    flex-basis: 55%;
+    height: 48vh;
+}
+
+@media(max-width: 1073px) {
+    
+}
+
+/* mobile */
+@media(max-width: 815px) { 
+    
 }
