--- a/src/styles.css
+++ b/src/styles.css
@@ -29,3 +29,9 @@ body {
 .disable-scrolling {
     overflow: hidden !important;
 }
+
+.center-image {
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
