cant pause wait-less video

--- a/src/app/windows/web-dev/web-dev.component.html
+++ b/src/app/windows/web-dev/web-dev.component.html
@@ -47,7 +47,7 @@
                         </p>
                     </div>
                     <div id="media">
-                        <video playsinline loop muted autoplay height="100%" controls>
+                        <video playsinline loop muted autoplay height="100%">
                             <source src="../../../assets/videos/waitless_mobile.mp4" type="video/mp4">
                             Error Message
                         </video>
