--- a/src/app/windows/web-dev/web-dev.component.css
+++ b/src/app/windows/web-dev/web-dev.component.css
@@ -138,26 +138,28 @@
     font-size: 19pt;
 }
 
-.desc-and-media > #desc {
+.desc-and-media>#desc {
     flex-basis: 35%;
     display: flex;
     align-items: center;
 }
 
-.desc-and-media > #media {
+.desc-and-media>#media {
     flex-basis: 55%;
     height: 48vh;
 }
 
-.desc-and-media > #media > :first-child {
+.desc-and-media>#media> :first-child {
     box-shadow: 10px 10px 0 0px #3f3f3f;
 }
 
-@media(max-width: 1073px) {
-    
+.divider {
+    width: 100%;
+    height: 2px;
+    background-color: white;
 }
 
+@media(max-width: 1073px) {}
+
 /* mobile */
-@media(max-width: 815px) { 
-    
-}
+@media(max-width: 815px) {}
