property scraper first in web-dev

--- a/src/app/windows/web-dev/web-dev.component.css
+++ b/src/app/windows/web-dev/web-dev.component.css
@@ -159,6 +159,10 @@
     background-color: white;
 }
 
+.reverse {
+    flex-direction: row-reverse;
+}
+
 @media(max-width: 1073px) {}
 
 /* mobile */
