--- a/src/app/windows/web-dev/web-dev.component.html
+++ b/src/app/windows/web-dev/web-dev.component.html
@@ -38,39 +38,6 @@
         <div class="projects">
             <p>Projects</p>
             <div class="project">
-                <p>Waitless Digital Menu Platform</p>
-                <div class="desc-and-media">
-                    <div id="desc">
-                        <p>This is a website where users can view a Menu of a Restaurant.
-                            All Restaurants have a specific style and theme of menu and this has to be replicated in the
-                            digital menu while not being a static png/svg
-                        </p>
-                    </div>
-                    <div id="media">
-                        <video playsinline loop muted autoplay height="100%">
-                            <source src="../../../assets/videos/waitless_mobile.mp4" type="video/mp4">
-                            Error Message
-                        </video>
-                    </div>
-                </div>
-                <div class="desc-and-media">
-                    <div id="desc">
-                        <p>Architecture/Stack:
-                            The Project uses Nginx on a hosted server to serve the html content. Menu and Restaurant
-                            data is
-                            stored on a MySQL database.
-                            Images are Stored on Google Cloud Buckets
-                        </p>
-                    </div>
-                    <div id="media">
-                        <div class="center-image"
-                            style="background-image: url(../../../assets/images/wait-less_infrastructure_diagram.png); height: 100%;">
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="divider"></div>
-            <div class="project">
                 <p>Property Scraper</p>
                 <div class="desc-and-media">
                     <div id="desc">
@@ -98,6 +65,39 @@
                     <div id="media">
                         <div class="center-image"
                             style="background-image: url(../../../assets/images/property\ scrape\ Infrastructure\ diagram.png); height: 100%;">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="divider"></div>
+            <div class="project">
+                <p>Waitless Digital Menu Platform</p>
+                <div class="desc-and-media reverse">
+                    <div id="desc">
+                        <p>This is a website where users can view a Menu of a Restaurant.
+                            All Restaurants have a specific style and theme of menu and this has to be replicated in the
+                            digital menu while not being a static png/svg
+                        </p>
+                    </div>
+                    <div id="media">
+                        <video playsinline loop muted autoplay height="100%">
+                            <source src="../../../assets/videos/waitless_mobile.mp4" type="video/mp4">
+                            Error Message
+                        </video>
+                    </div>
+                </div>
+                <div class="desc-and-media reverse">
+                    <div id="desc">
+                        <p>Architecture/Stack:
+                            The Project uses Nginx on a hosted server to serve the html content. Menu and Restaurant
+                            data is
+                            stored on a MySQL database.
+                            Images are Stored on Google Cloud Buckets
+                        </p>
+                    </div>
+                    <div id="media">
+                        <div class="center-image"
+                            style="background-image: url(../../../assets/images/wait-less_infrastructure_diagram.png); height: 100%;">
                         </div>
                     </div>
                 </div>
