--- a/src/app/windows/web-dev/web-dev.component.html
+++ b/src/app/windows/web-dev/web-dev.component.html
@@ -102,7 +102,7 @@
                     </div>
                 </div>
             </div>
-            <div class="project">
+            <!-- <div class="project">
                 <p>Faade Event Finder</p>
                 <div class="project-image">
                     <div class="project-text">
@@ -121,7 +121,7 @@
                         <p>Content Management System for managing The availabily of items on menus and specials</p>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 </div>
