fixed broken link and mongo image

--- a/src/app/windows/web-dev/web-dev.component.html
+++ b/src/app/windows/web-dev/web-dev.component.html
@@ -47,7 +47,7 @@
                         </p>
                     </div>
                     <div id="media">
-                        <video playsinline loop muted autoplay height="100%">
+                        <video playsinline loop muted autoplay height="100%" controls>
                             <source src="../../../assets/videos/property_mobile.mp4" type="video/mp4">
                             Error Message
                         </video>
@@ -80,7 +80,7 @@
                         </p>
                     </div>
                     <div id="media">
-                        <video playsinline loop muted autoplay height="100%">
+                        <video playsinline loop muted autoplay height="100%" controls>
                             <source src="../../../assets/videos/waitless_mobile.mp4" type="video/mp4">
                             Error Message
                         </video>
@@ -124,4 +124,5 @@
             </div> -->
         </div>
     </div>
+    <div style="min-height: 160px;"></div>
 </div>
