--- a/src/app/window/window.component.css
+++ b/src/app/window/window.component.css
@@ -52,3 +52,7 @@
 .grey-background {
     background-image: url(../../assets/images/Grey-Noisy-Gradient.png);
 }
+
+.black-background {
+    background-image: url(../../assets/images/Hacker-Black.png);
+};
