added computer graphics window

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -180,6 +180,16 @@ web-dev {
     color: white;
 }
 
+graphics-engine {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 83%;
+    gap: 1.6rem;
+    padding-bottom: 8rem;
+    color: white;
+}
+
 .contact-box {
     display: flex;
     flex-direction: column;
