--- a/src/app/windows/graphics-engine/graphics-engine.component.html
+++ b/src/app/windows/graphics-engine/graphics-engine.component.html
@@ -1,1 +1,28 @@
-<p>graphics-engine works!</p>
+<p class="title">Computer Graphics</p>
+<div class="computer-graphics-container">
+    <div class="project-fluff">
+        <p>I took on the challenge of building my own physics simulation engine from scratch. This means writing the shaders that tell the
+            GPU what to render. Progressing each object forward in time, based on real life physics. Efficiently resolving
+            collisions of objects and deciding the response. This has really tought me more about the C++ language and how computer graphics are done.
+        </p>
+    </div>
+    <div class="divider"></div>
+    <div class="projects-container">
+        <div class="project">
+            <p>Elastic Collision Simulation</p>
+            <div class="desc-and-media">
+                <div id="desc">
+                    <p>This Simulation shows one object of a low mass colliding with larger object of larger mass
+                        it can be seen that the object with the lower mass is often moving fastest as it has less inertia
+                    </p>
+                </div>
+                <div id="media">
+                    <video playsinline loop muted autoplay height="100%" controls>
+                        <source src="../../../assets/videos/collisions_1.mp4" type="video/mp4">
+                        Error Message
+                    </video>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
