added forgotten divider

--- a/src/app/windows/web-dev/web-dev.component.html
+++ b/src/app/windows/web-dev/web-dev.component.html
@@ -102,6 +102,7 @@
                     </div>
                 </div>
             </div>
+            <div class="divider"></div>
             <div class="project">
                 <p>Portfolio Website</p>
                 <div class="desc-and-media">
