added Class Diagram of Elastic Collision Simulation

--- a/src/app/windows/graphics-engine/graphics-engine.component.html
+++ b/src/app/windows/graphics-engine/graphics-engine.component.html
@@ -23,6 +23,18 @@
                     </video>
                 </div>
             </div>
+            <div class="desc-and-media">
+                <div id="desc">
+                    <p>
+                        Class Diagram of the Project (Click image to View diagram in full quality)
+                    </p>
+                </div>
+                <div id="media" (click)="openClassDiagram()">
+                    <div class="center-image"
+                        style="background-image: url(../../../assets/images/Custom-Engine\ UML.svg); height: 100%;">
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
